unpackaged/main/default/objects/SWOT__c/SWOT__c.object-meta.xml
<CustomObject>
    <label>SWOT</label>
    <nameField>
        <displayFormat>SW-{000000}</displayFormat>
        <label>SWOT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWOT</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>