unpackaged/main/default/objects/SWOT__c/fields/Merchant_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Account_Plan__c</fullName>
    <label>Merchant Account Plan</label>
    <referenceTo>Merchant_Account_Plan__c</referenceTo>
    <relationshipLabel>SWOT</relationshipLabel>
    <relationshipName>SWOT</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>