unpackaged/main/default/objects/SWOT__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <label>Opportunities</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Workstream_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agree on Regular Periodic Meetings</fullName>
            </value>
            <value>
                <fullName>Alternative Nationality Focus (e.g. India)</fullName>
            </value>
            <value>
                <fullName>Become the Omni-Channel Provider</fullName>
            </value>
            <value>
                <fullName>Build/Secure Relationship</fullName>
            </value>
            <value>
                <fullName>Close Missed Revenue Gaps</fullName>
            </value>
            <value>
                <fullName>Commitment on KPIs</fullName>
            </value>
            <value>
                <fullName>Compliance with EU Law</fullName>
            </value>
            <value>
                <fullName>Cross Sell/Grow Revenue</fullName>
            </value>
            <value>
                <fullName>Develop a Consistent Training Plan</fullName>
            </value>
            <value>
                <fullName>Develop a Tailored Training Plan Based on Store Performance</fullName>
            </value>
            <value>
                <fullName>Domestic and e-comm</fullName>
            </value>
            <value>
                <fullName>Engage with Client Marketing Team</fullName>
            </value>
            <value>
                <fullName>Enhanced Service</fullName>
            </value>
            <value>
                <fullName>Exclusivity</fullName>
            </value>
            <value>
                <fullName>Extend Contract to Other Countries</fullName>
            </value>
            <value>
                <fullName>Extend Our Refund Options Offer</fullName>
            </value>
            <value>
                <fullName>High International Shopper Spend</fullName>
            </value>
            <value>
                <fullName>Identify Gaps to Merchant; Demonstrate How Planet Can Close These and Increase Sales Revenue</fullName>
            </value>
            <value>
                <fullName>Improve Customer Experience</fullName>
            </value>
            <value>
                <fullName>Improve Issue Rate</fullName>
            </value>
            <value>
                <fullName>Improve Margins</fullName>
            </value>
            <value>
                <fullName>Improve Merchant &amp; Customer Payment Experience</fullName>
            </value>
            <value>
                <fullName>Improve Relationship</fullName>
            </value>
            <value>
                <fullName>Improve Service and Relationship</fullName>
            </value>
            <value>
                <fullName>Improve Service Level</fullName>
            </value>
            <value>
                <fullName>Increase Match Rate (or Other KPI)</fullName>
            </value>
            <value>
                <fullName>Increase Match Rate/Hit Rate (or Other KPI)</fullName>
            </value>
            <value>
                <fullName>In-Fill Markets</fullName>
            </value>
            <value>
                <fullName>Integration with Payments</fullName>
            </value>
            <value>
                <fullName>Introduce Additional Features</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>