unpackaged/main/default/objects/SWOT__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Focus Point(s)</fullName>
                <default>true</default>
                <label>Add Focus Point(s)</label>
            </value>
            <value>
                <fullName>Add Objective(s)</fullName>
            </value>
            <value>
                <fullName>Add Actions</fullName>
            </value>
            <value>
                <fullName>SWOT Minimum Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>