unpackaged/main/default/objects/SWOT__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <label>Strengths</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Workstream_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Additional Refund Options Ready to Deliver</fullName>
            </value>
            <value>
                <fullName>All in One Solution</fullName>
                <label>All in One solution</label>
            </value>
            <value>
                <fullName>Budget Signed Off for New Pos Solution</fullName>
            </value>
            <value>
                <fullName>Can Offer Card Recognition with Auto-Print</fullName>
            </value>
            <value>
                <fullName>Competitive Marketing Proposal</fullName>
            </value>
            <value>
                <fullName>Competitive Pricing</fullName>
            </value>
            <value>
                <fullName>Contract is Rolling (No Expiry Date)</fullName>
            </value>
            <value>
                <fullName>Contract was Recently Renewed</fullName>
            </value>
            <value>
                <fullName>Data on Item Purchased by Nationality</fullName>
            </value>
            <value>
                <fullName>Data Pool</fullName>
            </value>
            <value>
                <fullName>DCC Tailored Training</fullName>
            </value>
            <value>
                <fullName>Ease of Deployment</fullName>
            </value>
            <value>
                <fullName>Exclusivity</fullName>
            </value>
            <value>
                <fullName>Existing Relationship with Merchant</fullName>
            </value>
            <value>
                <fullName>Expertise in Acceptance of International Payment Methods</fullName>
            </value>
            <value>
                <fullName>Focus on International Customers</fullName>
            </value>
            <value>
                <fullName>Full Integration Including New Features</fullName>
            </value>
            <value>
                <fullName>Good Relationship with HO/Decision Maker</fullName>
            </value>
            <value>
                <fullName>Good Relationship with Key Stakeholders</fullName>
            </value>
            <value>
                <fullName>Good Relationship with Merchant</fullName>
            </value>
            <value>
                <fullName>Good Relationship with Store Staff</fullName>
            </value>
            <value>
                <fullName>ISTP Training Programme</fullName>
            </value>
            <value>
                <fullName>Lack of Existing Provider</fullName>
            </value>
            <value>
                <fullName>Local Dedicated Support Team</fullName>
            </value>
            <value>
                <fullName>Margin Initiatives</fullName>
            </value>
            <value>
                <fullName>Marketing Funding in Place</fullName>
            </value>
            <value>
                <fullName>New Solution is Ready to Deliver</fullName>
            </value>
            <value>
                <fullName>Ongoing Marketing Relationship</fullName>
            </value>
            <value>
                <fullName>Pan-EU Contract</fullName>
            </value>
            <value>
                <fullName>Pan-European Acquiring Offering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>