unpackaged/main/default/objects/SWOT__c/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <label>Threats</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Workstream_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Budget Freeze - Merchant Side</fullName>
            </value>
            <value>
                <fullName>Cannot Make Autonomous Decisions as Part of a Group</fullName>
            </value>
            <value>
                <fullName>Competition Still Operating Service in Some Countries</fullName>
            </value>
            <value>
                <fullName>Competitor is TF Provider</fullName>
            </value>
            <value>
                <fullName>Competitor Agencies</fullName>
            </value>
            <value>
                <fullName>Competitor has Better Benchmark</fullName>
            </value>
            <value>
                <fullName>Competitor Offers Superior Solution</fullName>
            </value>
            <value>
                <fullName>Competitors Working with Merchant in Other Countries</fullName>
            </value>
            <value>
                <fullName>Contact is Not Decision Maker</fullName>
            </value>
            <value>
                <fullName>Decision Maker Left/Changed</fullName>
            </value>
            <value>
                <fullName>Delay on Merchant&#39;s Side (Internal Process/Resourcing/Investment)</fullName>
            </value>
            <value>
                <fullName>Exclusivity Not Permitted in Some Markets (Competition Laws)</fullName>
            </value>
            <value>
                <fullName>Gaps in Relationship are Entry Point for Competition</fullName>
            </value>
            <value>
                <fullName>GB Offers Cultural Training for Free</fullName>
            </value>
            <value>
                <fullName>Go to Tender</fullName>
            </value>
            <value>
                <fullName>High Staff Turnover</fullName>
            </value>
            <value>
                <fullName>High Turnover of Top Management</fullName>
            </value>
            <value>
                <fullName>Legacy Solution with Limited Functionality</fullName>
            </value>
            <value>
                <fullName>Long Standing Relationship with Competitor</fullName>
            </value>
            <value>
                <fullName>Long-Time Relationship with Competitor</fullName>
            </value>
            <value>
                <fullName>Marketing/Consultancy Offer is Not Competitive</fullName>
            </value>
            <value>
                <fullName>Merchant Complaints</fullName>
            </value>
            <value>
                <fullName>Merchant Does Not Permit Planet Training</fullName>
            </value>
            <value>
                <fullName>Merchant Doesn’t Agree With GDPR Terms</fullName>
            </value>
            <value>
                <fullName>Merchant Doesn&#39;t See Us a  Priority</fullName>
            </value>
            <value>
                <fullName>Merchant Engagement</fullName>
            </value>
            <value>
                <fullName>Merchant has a Direct Agreement with Alipay and/or WeChat Pay</fullName>
            </value>
            <value>
                <fullName>Merchant is Changing ePOS Provider</fullName>
            </value>
            <value>
                <fullName>Merchant Not Engaged in Discussion on Reporting</fullName>
            </value>
            <value>
                <fullName>Merchant Not Satisfied with Service Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>