unpackaged/main/default/objects/SWOT__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <label>Weaknesses</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Workstream_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Aged Debt</fullName>
            </value>
            <value>
                <fullName>Backup Solution Doesn&#39;t Meet All Needs</fullName>
            </value>
            <value>
                <fullName>Business Reviews Can Be Ad-Hoc/Inconsistent</fullName>
            </value>
            <value>
                <fullName>Complexity/Accuracy of Reports</fullName>
            </value>
            <value>
                <fullName>Contract is Expiring This Year</fullName>
            </value>
            <value>
                <fullName>Cost of Program</fullName>
            </value>
            <value>
                <fullName>Cost of Tableau</fullName>
            </value>
            <value>
                <fullName>Delay in Delivery and Errors</fullName>
            </value>
            <value>
                <fullName>Delay on Planet&#39;s Side (Resourcing, PDP Process, Investment)</fullName>
            </value>
            <value>
                <fullName>Existing Relationship with Merchant</fullName>
            </value>
            <value>
                <fullName>Financial Issues - Planet Side</fullName>
            </value>
            <value>
                <fullName>Heavy Onboarding Process</fullName>
            </value>
            <value>
                <fullName>Hidden/Complicated Fee Structure</fullName>
            </value>
            <value>
                <fullName>Inconsistent Standard of Account Management</fullName>
            </value>
            <value>
                <fullName>Incumbent Acquirer Offers a Competitive  Service</fullName>
            </value>
            <value>
                <fullName>Lack of Consistency of Refund Options Across Europe</fullName>
            </value>
            <value>
                <fullName>Lack of Consistent Benchmark</fullName>
            </value>
            <value>
                <fullName>Lack of Product To Sell</fullName>
            </value>
            <value>
                <fullName>Lack of Proper Mystery Shoppers in Some Countries</fullName>
            </value>
            <value>
                <fullName>Lack of Standardised Training Material</fullName>
            </value>
            <value>
                <fullName>Lack of Training on How to Sell In</fullName>
            </value>
            <value>
                <fullName>Marketing Contract with Alternative Supplier</fullName>
            </value>
            <value>
                <fullName>Merchant is Not Satisfied with Planet Service</fullName>
            </value>
            <value>
                <fullName>Merchant is Not Satisfied with Planet Solution</fullName>
            </value>
            <value>
                <fullName>Merchant Rebate Negatively Impacted</fullName>
            </value>
            <value>
                <fullName>No Benchmarking BI Offered</fullName>
            </value>
            <value>
                <fullName>No Collateral/Case Studies to Leverage From</fullName>
            </value>
            <value>
                <fullName>No Integration to Shopping Carts</fullName>
            </value>
            <value>
                <fullName>No Partnership with Incumbent Acquirer</fullName>
            </value>
            <value>
                <fullName>No Payment Marketing Options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>