unpackaged/main/default/objects/SWOT__c/fields/Workstream1__c.field-meta.xml
<CustomField>
    <fullName>Workstream1__c</fullName>
    <inlineHelpText>Only use Default Value if creating directly from a Focus Point.</inlineHelpText>
    <label>Workstream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>New_Workstream</valueSetName>
    </valueSet>
</CustomField>