unpackaged/main/default/objects/SWOT__c/fields/Workstream__c.field-meta.xml
<CustomField>
    <fullName>Workstream__c</fullName>
    <label>Workstream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POS Solution</fullName>
            </value>
            <value>
                <fullName>Service and Logistics</fullName>
            </value>
            <value>
                <fullName>Statistical Reporting</fullName>
            </value>
            <value>
                <fullName>Planet Intelligence</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Training and Consultancy</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>