unpackaged/main/default/objects/SWOT__c/recordTypes/SWOT.recordType-meta.xml
<RecordType>
    <fullName>SWOT</fullName>
    <active>true</active>
    <label>SWOT</label>
</RecordType>