unpackaged/main/default/objects/SWOT__c/recordTypes/SWOT_New.recordType-meta.xml
<RecordType>
    <fullName>SWOT_New</fullName>
    <active>true</active>
    <label>SWOT New</label>
</RecordType>